@@ -34,6 +34,7 @@
  </stability>
  <license uri="http://www.horde.org/licenses/gpl">GPL-2.0</license>
  <notes>
+* [mms] Fix regression in creating top-level mailbox in traditional view (Bug #11326).
 * [mms] Fix spam reporting in minimal view.
  </notes>
  <contents>
@@ -2760,6 +2761,7 @@
    <date>2012-07-20</date>
    <license uri="http://www.horde.org/licenses/gpl">GPL-2.0</license>
    <notes>
+* [mms] Fix regression in creating top-level mailbox in traditional view (Bug #11326).
 * [mms] Fix spam reporting in minimal view.
    </notes>
   </release>
